@@ -28,5 +28,5 @@ int main()
   return 0;
 }
 
-// { dg-error "deleted" "" { target *-*-* } 522 }
+// { dg-error "deleted" "" { target *-*-* } 530 }
 // { dg-prune-output "include" }
